# Robotic-ARM-3DOF_FrontEnd

./: .gitignore  BackEnd.cpp  BackEnd.h  CMakeLists.txt  FileHandler.cpp  FileHandler.h  InverseKinematics.cpp  InverseKinematics.h  README.md  RoboticArm3DOF_GUI.qmlproject  RoboticArm3DOF_GUI.qmlproject.pZmEOA  RoboticArm3DOF_GUI.qmlproject.qtds  SerialPort.cpp  SerialPort.h  SliderHandler.cpp  SliderHandler.h  WidgetListDynmaic_cords.cpp  WidgetListDynmaic_cords.h  WidgetListDynmaic_cordsAuto.cpp  WidgetListDynmaic_cordsAuto.h  qds.cmake
App/: main.cpp  main.cpp.autosave.HELeaW
App/autogen/: environment.h
RoboticArm3DOF_GUI/: CMakeLists.txt  Constants.qml  qmldir
RoboticArm3DOF_GUI/designer/: plugin.metainfo
RoboticArm3DOF_GUIContent/: AutomaticMode.qml  AutomaticMode.qml.autosave  Backend.qml  ButtonPosition.qml  CMakeLists.txt  CameraMovment.qml  Controller.qml  CustomDropDown.qml  InverseTextInput.ui.qml  KinematicMode.qml  KinematicMode.qml.gVBtqn  ModelDelegate.qml  MyButton.qml  MyButton.ui.qml  NodeJointForm.qml.MiuZyc  RoboticArm.qml  RoboticArm.ui.qml  RoboticArm.ui.qml.GbpMNC  Screen01.qml  Screen01.ui.qml  Screen01.ui.qml.autosave  SliderAngle.qml  Test.qml  ToggleDark.ui.qml
RoboticArm3DOF_GUIContent/BackEnd/: SerialPort.cpp
meshes/FBX/: RoboticArm.fbx  RoboticArm2.fbx  RoboticArm4.fbx  finger_L.fbx  finger_R.fbx  gripper.fbx
